--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -86,5 +86,14 @@
     <script type="application/javascript"
             src="$APP_ROOT/app/cockpit/scripts/deps.js"
             data-main="$APP_ROOT/app/cockpit/scripts/camunda-cockpit-ui"></script>
+
+    <!--[if lte IE 9]>
+    <script type="text/javascript"
+            src="$APP_ROOT/app/cockpit/scripts/placeholders.utils.js"></script>
+    <script type="text/javascript"
+            src="$APP_ROOT/app/cockpit/scripts/placeholders.main.js"></script>
+    <script type="text/javascript"
+            src="$APP_ROOT/app/cockpit/scripts/placeholders.jquery.js"></script>
+    <![endif]-->
   </body>
 </html>
