fix(placeholder): correct the placeholders shim
Related to CAM-3328

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -113,5 +113,14 @@
             src="$APP_ROOT/app/admin/scripts/deps.js"
             data-main="$APP_ROOT/app/admin/scripts/camunda-admin-ui"></script>
 
+
+    <!--[if lte IE 9]>
+    <script type="text/javascript"
+            src="$APP_ROOT/app/admin/scripts/placeholders.utils.js"></script>
+    <script type="text/javascript"
+            src="$APP_ROOT/app/admin/scripts/placeholders.main.js"></script>
+    <script type="text/javascript"
+            src="$APP_ROOT/app/admin/scripts/placeholders.jquery.js"></script>
+    <![endif]-->
   </body>
 </html>
