fix(sorting): re-initialize when adding sorting for 2nd time
Related to CAM-3567

--- a/client/client/scripts/tasklist/directives/cam-tasklist-sorting-choices.html
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-sorting-choices.html
@@ -49,7 +49,8 @@
 
 
   <li class="dropdown new-sort"
-      is-open="openDropdownNew">
+      is-open="openDropdownNew"
+      on-toggle="newSortingToggle(open)">
     <a href
        class="dropdown-toggle">
       <span class="glyphicon glyphicon-plus-sign"
