fix(footer): pass app version to footer
Related to CAM-3577

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -76,7 +76,8 @@
     </div>
 
     <!-- footer -->
-    <footer cam-widget-footer></footer>
+    <footer cam-widget-footer
+            version="v${project.version}"></footer>
 
     <script type="application/javascript">
       window.PLUGIN_DEPENDENCIES = $PLUGIN_DEPENDENCIES || [];
