fix(footer): pass app version to footer
Related to CAM-3577

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -71,7 +71,8 @@
 
 
   <!-- # page-footer -->
-  <footer cam-widget-footer></footer>
+  <footer cam-widget-footer
+          version="v${project.version}"></footer>
 
 
   <script type="text/javascript">
