--- a/client/client/scripts/pages/process-instance.html
+++ b/client/client/scripts/pages/process-instance.html
@@ -87,7 +87,8 @@
         <div class="filter instance-tree">
           <div activity-instance-tree="activityInstanceTree"
                selection="filter"
-               on-element-click="handleActivityInstanceSelection(id, activityId, $event)">
+               on-element-click="handleActivityInstanceSelection(id, activityId, $event)"
+               order-children-by="orderChildrenBy()">
           </div>
         </div>
       </div>
