--- a/client/webapp/src/main/webapp/develop/invoice/invoice-start-form.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-start-form.html
@@ -8,9 +8,9 @@
   </div>
 
   <div class="form-group">
-    <label class="control-label"
+    <label class="control-label col-xs-3"
            for="creditor">Creditor</label>
-    <div class="controls">
+    <div class="col-xs-9">
       <input cam-variable-name="creditor"
              cam-variable-type="String"
              required
@@ -24,9 +24,9 @@
   </div>
 
   <div class="form-group">
-    <label class="control-label"
+    <label class="control-label col-xs-3"
            for="amount">Amount</label>
-    <div class="controls">
+    <div class="col-xs-9">
       <input cam-variable-name="amount"
              cam-variable-type="String"
              required
@@ -40,9 +40,9 @@
   </div>
 
   <div class="form-group">
-    <label class="control-label"
+    <label class="control-label col-xs-3"
            for="invoiceNumber">Invoice Number</label>
-    <div class="controls">
+    <div class="col-xs-9">
       <input cam-variable-name="invoiceNumber"
              cam-variable-type="String"
              required
