--- a/client/webapp/src/main/webapp/develop/invoice/invoice-prepare-bank-transfer.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-prepare-bank-transfer.html
@@ -4,9 +4,11 @@
     <div class="panel panel-info">You can prepare the bank transfer for the following invoice</div>
 
     <div class="form-group">
-        <label class="control-label">Creditor</label>
-        <div class="controls">
+        <label for="input-1"
+               class="control-label col-xs-3">Creditor</label>
+        <div class="col-xs-9">
             <input cam-variable-name="creditor"
+                   id="input-1"
                    type="text"
                    name="creditor"
                    readonly="true"
@@ -14,9 +16,11 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label">Amount</label>
-        <div class="controls">
+        <label for="input-2"
+               class="control-label col-xs-3">Amount</label>
+        <div class="col-xs-9">
             <input cam-variable-name="amount"
+                   id="input-2"
                    type="text"
                    name="amount"
                    readonly="true"
@@ -24,9 +28,11 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label">Invoice Number</label>
-        <div class="controls">
+        <label for="input-3"
+               class="control-label col-xs-3">Invoice Number</label>
+        <div class="col-xs-9">
             <input cam-variable-name="invoiceNumber"
+                   id="input-3"
                    type="text"
                    name="invoiceNumber"
                    readonly="true"
@@ -34,9 +40,11 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label">Approved by </label>
-        <div class="controls">
+        <label for="input-4"
+               class="control-label col-xs-3">Approved by </label>
+        <div class="col-xs-9">
             <input cam-variable-name="approver"
+                   id="input-4"
                    type="text"
                    name="approved"
                    readonly="true"
