--- a/client/webapp/src/main/webapp/develop/invoice/invoice-review.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-review.html
@@ -7,37 +7,45 @@
     </div>
 
     <div class="form-group">
-        <label class="control-label">Creditor</label>
-        <div class="controls">
+        <label for="input-1"
+               class="control-label col-xs-3">Creditor</label>
+        <div class="col-xs-9">
             <input cam-variable-name="creditor"
+                   id="input-1"
                    type="text"
                    name="creditor"
                    class="form-control" />
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label">Amount</label>
-        <div class="controls">
+        <label for="input-2"
+               class="control-label col-xs-3">Amount</label>
+        <div class="col-xs-9">
             <input cam-variable-name="amount"
+                   id="input-2"
                    type="text"
                    name="amount"
                    class="form-control" />
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label">Invoice Number</label>
-        <div class="controls">
+        <label for="input-3"
+               class="control-label col-xs-3">Invoice Number</label>
+        <div class="col-xs-9">
             <input cam-variable-name="invoiceNumber"
+                   id="input-3"
                    type="text"
                    name="invoiceNumber"
                    class="form-control" />
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label">Could you clarify the invoice? </label>
-        <div class="controls">
+        <label for="input-4"
+               class="control-label col-xs-3">Could you clarify the invoice? </label>
+        <div class="col-xs-9">
             <input cam-variable-name="clarified"
                    cam-variable-type="Boolean"
+                   id="input-4"
                    type="checkbox"
                    name="clarified"
                    class="form-control" />
