--- a/client/client/scripts/directives/processDiagram.html
+++ b/client/client/scripts/directives/processDiagram.html
@@ -3,5 +3,7 @@
   control='control'
   on-load='onLoad()'
   on-click='onClick(element, $event)'
+  on-mouse-enter='onMouseEnter(element, $event)'
+  on-mouse-leave='onMouseLeave(element, $event)'
   style='height: 100%'>
 </div>
