chore(filter-criteria):add sem tag for testability

--- a/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-criteria.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-criteria.html
@@ -49,7 +49,8 @@
 
                 <option ng-repeat="criterion in criteriaGroup.options"
                         ng-selected="criterion.name === getCriterionName(queryParam.key)"
-                        ng-value="criterion.name">
+                        ng-value="criterion.name"
+                        sem-id="{{criteriaGroup.group}} {{criterion.label}}">
 
                   {{ criterion.label | translate }}
                   {{ (criterion.expressionSupport ? '*' : '') }}
