chore(bpmn models): use bpmn.io for model management
chore(dependencies): remove bmpn.js

related to CAM-3637

--- a/client/client/scripts/directives/processDiagram.html
+++ b/client/client/scripts/directives/processDiagram.html
@@ -1,5 +1,5 @@
 <div cam-widget-bpmn-viewer
-  diagram-data='diagramXML'
+  diagram-data='diagramData'
   control='control'
   on-load='onLoad()'
   on-click='onClick(element, $event)'
