chore(sorting): refactor tasklist sorting
related to CAM-3567, CAM-3595

--- a/client/client/scripts/tasklist/directives/cam-tasklist-sorting-inputs.html
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-sorting-inputs.html
@@ -20,7 +20,7 @@
     <button ng-click="applySorting($event)"
             ng-disabled="!variable"
             class="btn btn-primary btn-sm">
-      {{ (sorting ? 'CHANGE' : 'ADD') | translate }}
+      {{ (change ? 'CHANGE' : 'ADD') | translate }}
     </button>
   </div>
 </div>
