--- a/client/client/scripts/tasklist/directives/cam-tasklist-sorting-choices.html
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-sorting-choices.html
@@ -4,7 +4,8 @@
 <ol class="sorting-choice list-inline">
   <li ng-repeat="(index, sorting) in sortings"
       class="sorting-choice dropdown"
-      is-open="openDropdowns[index]">
+      is-open="openDropdowns[index]"
+      on-toggle="openDropdown(index, open)">
     <a class="glyphicon glyphicon-minus-sign"
        ng-if="sortings.length > 1"
        ng-click="removeSorting(index)"
@@ -24,33 +25,17 @@
        ng-class="sorting.order === 'asc' ? 'glyphicon-chevron-up' : 'glyphicon-chevron-down'"
        ng-click="changeOrder(index)"></a>
 
-    <ul class="dropdown-menu">
-      <!-- single time selectable -->
-      <li ng-repeat="(name, label) in uniqueProps"
-          ng-if="sortedOn.indexOf(name) < 0">
-        <a tabindex="-1"
-           translate="{{ label }}"
-           ng-click="changeBy(index, name)"></a>
-      </li>
-
-      <li class="divider"
-          ng-if="sortedOn.length < sortLimit"></li>
-
-      <!-- multiple times selectable -->
-      <li class="cam-sorting-variables"
-          sorting="sorting"></li>
+    <ul cam-sorting-dropdown
+        options="availableOptions"
+        click-handler="changeSorting(index, id, type, value)"
+        reset-function="resetFunctions[index]"
+        change="true">
     </ul>
   </li>
 
-
-
-
-
-
-
   <li class="dropdown new-sort"
       is-open="openDropdownNew"
-      on-toggle="newSortingToggle(open)">
+      on-toggle="openDropdown(-1, open)">
     <a href
        class="dropdown-toggle">
       <span class="glyphicon glyphicon-plus-sign"
@@ -59,22 +44,10 @@
             translate="ADD_SORT_BY"></span>
     </a>
 
-    <ul class="dropdown-menu">
-      <!-- single time selectable -->
-      <li ng-repeat="(name, label) in uniqueProps"
-          ng-if="sortedOn.indexOf(name) < 0">
-        <a tabindex="-1"
-           translate="{{ label }}"
-           ng-click="addSorting(name)">
-        </a>
-      </li>
-
-      <li class="divider"
-          ng-if="sortedOn.length < sortLimit"></li>
-
-      <!-- multiple times selectable -->
-      <li class="cam-sorting-variables"
-          sorting="newSorting"></li>
+    <ul cam-sorting-dropdown
+        options="availableOptions"
+        click-handler="addSorting(id, type, value)"
+        reset-function="resetFunctions[-1]">
     </ul>
   </li>
 </ol>
