impr(sorting): preserve variable name and type across options
related to CAM-3567

--- a/client/client/scripts/tasklist/directives/cam-tasklist-sorting-dropdown.html
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-sorting-dropdown.html
@@ -20,7 +20,8 @@
     <div ng-show="name === focusedOn"
          cam-sorting-inputs
          change="change"
-         apply-handler="handleClick($event, name, type, value)"
+         apply-handler="handleClick($event, name)"
+         variable="variable"
          reset-function="resetInputs[name]"></div>
   </li>
 
