--- a/client/client/scripts/tasklist/directives/cam-tasklist-sorting-inputs.html
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-sorting-inputs.html
@@ -3,15 +3,15 @@
     <input type="text"
            placeholder="{{ 'VARIABLE_NAME' | translate }}"
            class="form-control"
-           ng-model="variable"
+           ng-model="variable.varName"
            autofocus />
   </div>
 
   <div class="form-group">
     <select class="form-control"
-            ng-value="sorting.parameters.type">
+            ng-model="variable.varType">
       <option ng-repeat="(varType, varText) in variableTypes"
-              ng-selected="varType === sorting.parameters.type"
+              ng-selected="varType === variable.varType"
               value="{{ varType }}">{{ varText }}</option>
     </select>
   </div>
