--- a/client/client/scripts/pages/process-instance.html
+++ b/client/client/scripts/pages/process-instance.html
@@ -105,8 +105,7 @@
              on-element-click="handleBpmnElementSelection(id, $event)"
              selection="filter"
              process-data="processData"
-             provider-component="cockpit.processInstance.diagram.overlay"
-             select-all="true"></div>
+             provider-component="cockpit.processInstance.diagram.overlay"></div>
       </div>
 
       <!-- content bottom pane -->
