--- a/client/client/scripts/pages/process-instance.html
+++ b/client/client/scripts/pages/process-instance.html
@@ -105,6 +105,7 @@
              on-element-click="handleBpmnElementSelection(id, $event)"
              selection="filter"
              process-data="processData"
+             page-data="pageData"
              provider-component="cockpit.processInstance.diagram.overlay"></div>
       </div>
 
