feat(bpmn icon): add bpmn symbol icon in activity tree
Related to CAM-3675

--- a/client/client/scripts/directives/activity-instance-tree.html
+++ b/client/client/scripts/directives/activity-instance-tree.html
@@ -22,7 +22,8 @@
 
       <a ng-click="select($event)"
          tooltip-placement="top"
-         tooltip="{{ node.name }}">
+         tooltip="{{ node.name }} {{ node.activityType }}">
+        <span class="icon-{{ dashed(node.activityType) }}"></span>
         {{ node.name }}
       </a>
 
