--- a/client/client/scripts/pages/authorizations.html
+++ b/client/client/scripts/pages/authorizations.html
@@ -105,7 +105,7 @@
                              id="inputIdentityId"
                              placeholder="User / Group Id"
                              ng-disabled="isIdentityIdDisabled()"
-                             ng-model="identityId"
+                             ng-model="newAuthorization.identityId"
                              required />
                     </div>
                   </td>
