impr(filter perm): align the permission addition process
Related to CAM-3733

--- a/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form.html
@@ -56,7 +56,8 @@
       <div cam-tasklist-filter-modal-form-permission
            filter="filter"
            accesses="accesses"
-           filter-modal-form-data="filterModalFormData">
+           filter-modal-form-data="filterModalFormData"
+           is-open="accordion.permission">
       </div>
 
     </accordion-group>
