fix(filter permission): make strings translatable
Related to CAM-3733

--- a/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.html
@@ -46,10 +46,10 @@
         </div>
 
         <label class="col-xs-2 control-label">
-          Group / User
+          {{ 'FILTER_FORM_PERMISSION_GROUP_USER' | translate }}
         </label>
         <label class="col-xs-8 control-label">
-          Identifier
+          {{ 'FILTER_FORM_PERMISSION_IDENTIFIER' | translate }}
         </label>
       </div>
 
