fix(filter dialog): correct the way permissions are added
Related to CAM-3774

--- a/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.html
@@ -87,7 +87,8 @@
         </div>
       </div><!-- repeat auth -->
 
-      <div class="form-group new-permission">
+      <div class="form-group new-permission"
+           ng-if="showNewPermissionFields()">
         <div class="col-xs-2 col-xs-offset-2">
           <button class="btn btn-default"
                   type="button"
