impr(filter dialog): hide the new permission fields by default
Related to CAM-3774

--- a/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.html
@@ -88,7 +88,7 @@
       </div><!-- repeat auth -->
 
       <div class="form-group new-permission"
-           ng-if="showNewPermissionFields()">
+           ng-if="showNewPermissionFields">
         <div class="col-xs-2 col-xs-offset-2">
           <button class="btn btn-default"
                   type="button"
