--- a/client/client/scripts/directives/variable.html
+++ b/client/client/scripts/directives/variable.html
@@ -50,12 +50,38 @@
          autofocus="autofocus"
          required />
 
-  <textarea ng-if="isString(variable) || isNull(variable)"
+  <textarea ng-if="isString(variable)"
             rows="5"
             ng-model="variable.value"
             class="form-control variable-type-string"
             ng-class="{'in-place-edit': isInPlaceEdit() }"
             autofocus="autofocus"
             required></textarea>
+
+  <div ng-if="isObject(variable)">
+      <label class="control-label"
+             for="objectTypeName">Object type name*</label>
+        <input id="objectTypeName"
+               name="objectTypeName"
+               class="form-control"
+               type="text"
+               ng-model="variable.valueInfo.objectTypeName"
+               autofocus
+               required />
+      <label class="control-label"
+             for="serializationDataFormat">Serialization data format*</label>
+        <input id="serializationDataFormat"
+               name="serializationDataFormat"
+               class="form-control"
+               type="text"
+               ng-model="variable.valueInfo.serializationDataFormat"
+               required />
+      <label class="control-label"
+             for="serializedValue">Serialized value</label>
+        <textarea rows="5"
+                  ng-model="variable.value"
+                  class="form-control"
+                  ></textarea>
+  </div>
   <!-- / CE - camunda-cockpit-ui/client/scripts/directives/variable.html -->
 </div>
